See http://netpbm.sourceforge.net/history.html for a general history of
Netpbm.

CHANGE HISTORY 
--------------

not yet  BJH  Release 11.10.00

              pamdice: Add -listfile, -indexfile, -numberwidth, -dry-run .

              pamundice: Add -indexfile .

              pammixmulti: Fix crash from uninitialized memory.  Introduced in
              Netpbm 11.09 (December 2024).

24.12.25 BJH  Release 11.09.00

              pammixmulti: Add -blend=alpha-weighted.  Thanks Scott Pakin.

              ppmhist: Don't accept -nomap and -map together, or -colorname
              with -map.  (Before, -nomap and -colorname were ignored with
              -map).

              libnetpbm: Fix crash in ppm_colorDict_destroy; affects all
              programs that use color names.  Introduced in Netpbm 11.07 (June
              2024).

              pcxtoppm: Fix wildly incorrect output for all multiplane images.
              Broken in Netpbm 11.04 (September 2023).

              pbmtoascii: Fix bug: allows both -1x2 and -2x4.  Always present
              (pbmtoascii existed in primordial Netpbm).

              build: fix type mismatch warning linking ppmtompeg.  Always
              broken (ppmtompeg was new to Netpbm in April 2004).

              build: Make it work with -std=gnu23, which is the default in
              recent GCC.  To wit, remove local declaration of "bool".

              makeman: fix for HTML lists that have blank lines between items.

24.09.29 BJH  Release 11.08.00

              libnetpbm color name parsing: Fix handling of rgb: color names
              with more than 4 hex digits per plane, so it throws an error
              instead of generating an invalid or wrong color.  Broken in
              primordial Netpbm.

              libnetpbm color name parsing: Fix error message for invalid
              rgb-<MAXVAL> color name.

              build: fix typo in check of DARWIN_C_SOURCE so strdup, etc.