@@ -13,6 +13,9 @@ not yet  BJH  Release 11.10.00
               pammixmulti: Fix crash from uninitialized memory.  Introduced in
               Netpbm 11.09 (December 2024).
 
+              giftopnm: Fix wild pointer reference with -verbose and
+              invalid extension type.  Broken in Netpbm 10.59 (December 2012).
+
 24.12.25 BJH  Release 11.09.00
 
               pammixmulti: Add -blend=alpha-weighted.  Thanks Scott Pakin.
